--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
-== README
+== Twitter Clone
 
 A web application with React and Flux on the frontend, Rails as your API backend server, and tools like Webpack and Bable.js for ES6. Demonstrates how to build a basic Twitter Clone with React and Flux from Facebook on the frontend, and with Rails as the backend JSON API server. Covers the Flux pattern for Actions, Dispatcher, Stores, and React.js components for Views, and writing all JavaScript with ECMAScript2015 (ES6) syntax, and using Webpack and Babel to transpile JavaScript files and manage their dependencies.
